--- a/apps/frontend/landing/package.json
+++ b/apps/frontend/landing/package.json
@@ -41,7 +41,7 @@
     "recharts": "2.11.0",
     "superjson": "2.2.1",
     "tailwindcss-animate": "1.0.7",
-    "zod": "3.22.4",
+    "zod": "^3.23.5",
     "zustand": "4.5.0",
     "vaul": "0.9.0",
     "@vercel/analytics": "1.1.3",
@@ -65,7 +65,7 @@
     "eslint": "8.57.0",
     "prettier": "3.2.5",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.5",
+    "typescript": "^5.5.3",
     "contentlayer2": "0.4.6",
     "next-contentlayer2": "0.4.6",
     "rehype": "13.0.1",
