--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -18,7 +18,7 @@
     "next-auth": "4.24.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.22.4"
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@saasfly/eslint-config": "workspace:*",
@@ -26,7 +26,7 @@
     "@saasfly/typescript-config": "workspace:*",
     "eslint": "8.57.0",
     "prettier": "3.2.5",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.3"
   },
   "eslintConfig": {
     "root": true,
