--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -33,7 +33,7 @@
     "prisma": "5.9.1",
     "prisma-kysely": "1.7.1",
     "@types/pg": "8.11.0",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.3"
   },
   "eslintConfig": {
     "root": true,
