--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,7 +51,7 @@
     "cmdk": "0.2.1",
     "lucide-react": "0.323.0",
     "tailwind-merge": "1.14.0",
-    "zod": "3.22.4",
+    "zod": "^3.23.5",
     "@tsparticles/react" : "3.0.0",
     "@tsparticles/engine": "3.3.0",
     "@tsparticles/slim":  "3.3.0",
@@ -76,7 +76,7 @@
     "react-hook-form": "7.50.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "typescript": "5.4.5"
+    "typescript": "^5.5.3"
   },
   "prettier": "@saasfly/prettier-config",
   "eslintConfig": {
