--- a/apps/auth-proxy/package.json
+++ b/apps/auth-proxy/package.json
@@ -16,11 +16,11 @@
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/tailwind-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "@types/node": "20.12.12",
-    "eslint": "8.57.0",
+    "@types/node": "^20.14.11",
+    "eslint": "^8.57.0",
     "h3": "1.11.1",
     "nitropack": "2.9.6",
-    "prettier": "3.2.5",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
