--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -23,55 +23,55 @@
     "@nivo/calendar": "^0.87.0",
     "@nivo/funnel": "^0.86.0",
     "@nivo/line": "^0.86.0",
-    "@react-email/button": "0.0.11",
-    "@react-email/components": "0.0.7",
-    "@react-email/html": "0.0.6",
+    "@react-email/button": "0.0.15",
+    "@react-email/components": "0.0.19",
+    "@react-email/html": "0.0.8",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-table": "^8.10.7",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@tanstack/react-table": "^8.17.0",
+    "@typescript-eslint/parser": "7.5.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.5.20",
     "axios": "^1.6.7",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^0.2.1",
     "concurrently": "^8.2.2",
     "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
+    "date-fns": "3.3.1",
     "framer-motion": "^11.0.14",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "0.323.0",
     "ms": "^2.1.3",
-    "next": "^14.2.3",
-    "next-auth": "4.24.4",
+    "next": "^14.2.5",
+    "next-auth": "4.24.7",
     "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
     "onborda": "^1.2.2",
     "openai": "^4.16.1",
     "postmark": "^3.1.1",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-activity-calendar": "^2.2.8",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "18.2.0",
+    "react-day-picker": "^8.10.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-email": "1.9.5",
+    "react-email": "2.1.1",
     "react-facebook-pixel": "^1.0.4",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.50.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
-    "react-wrap-balancer": "^1.1.0",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
-    "resend": "^1.1.0",
+    "resend": "^3.4.0",
     "sharp": "^0.32.6",
-    "shiki": "^0.14.5",
-    "stripe": "^14.2.0",
-    "tailwind-merge": "^2.0.0",
+    "shiki": "^1.10.3",
+    "stripe": "^14.15.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.7.7",
-    "zod": "^3.23.4",
+    "zod": "^3.23.5",
     "zustand": "^4.4.5"
   },
   "devDependencies": {
@@ -79,14 +79,14 @@
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/tailwind-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "@types/node": "^20.12.5",
-    "@types/react": "^18.2.77",
-    "@types/react-dom": "^18.2.25",
-    "autoprefixer": "^10.4.16",
+    "@types/node": "^20.14.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.17",
     "dotenv-cli": "^7.4.1",
     "jiti": "^1.21.0",
     "mdast-util-toc": "^7.0.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "pretty-quick": "^3.1.3",
     "rehype": "^13.0.1",
     "rehype-autolink-headings": "^7.0.0",
@@ -94,8 +94,8 @@
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3",
     "unist-util-visit": "^5.0.0"
   },
   "prettier": "@saasfly/prettier-config"
