--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "lint": "turbo lint -- --quiet -- --cache --cache-location 'node_modules/.cache/.eslintcache' && manypkg check",
     "lint:fix": "turbo lint --continue -- --fix --cache --cache-location 'node_modules/.cache/.eslintcache' ",
     "typecheck": "turbo typecheck",
-    "postinstall": "bun run check-deps",
-    "check-deps": "check-dependency-version-consistency .",
     "gen": "turbo gen --config 'turbo/generators/config.ts'",
     "compile-tw-config": "tsc --noEmitOnError tooling/tailwind-config/index.ts --outDir  ./",
     "tailwind-config-viewer": " tailwind-config-viewer -c ./index.js -o -p 3333"
@@ -22,7 +20,7 @@
   "devDependencies": {
     "@turbo/gen": "1.13.3",
     "check-dependency-version-consistency": "4.1.0",
-    "prettier": "3.2.5",
+    "prettier": "^3.3.3",
     "tailwind-config-viewer": "^2.0.4",
     "turbo": "1.13.3",
     "typescript": "^5.5.3"
