--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,7 +29,7 @@
     "@saasfly/db": "workspace:*",
     "@trpc/client": "10.44.1",
     "@trpc/server": "10.44.1",
-    "@t3-oss/env-nextjs": "0.8.0",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "superjson": "^2.2.1",
     "dinero.js": "2.0.0-alpha.14",
     "@dinero.js/currencies": "2.0.0-alpha.14",
@@ -40,8 +40,8 @@
     "@saasfly/eslint-config": "workspace:*",
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
