--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -13,19 +13,19 @@
   "dependencies": {
     "@auth/kysely-adapter": "0.4.2",
     "@saasfly/db": "workspace:*",
-    "@t3-oss/env-nextjs": "0.8.0",
-    "next": "14.2.5",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "next": "^14.2.5",
     "next-auth": "4.24.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.23.5"
   },
   "devDependencies": {
     "@saasfly/eslint-config": "workspace:*",
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
