--- a/packages/stripe/package.json
+++ b/packages/stripe/package.json
@@ -23,15 +23,15 @@
   },
   "dependencies": {
     "@saasfly/db": "workspace:*",
-    "@t3-oss/env-nextjs": "0.8.0",
-    "stripe": "14.15.0"
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "stripe": "^14.15.0"
   },
   "devDependencies": {
     "@saasfly/eslint-config": "workspace:*",
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
