--- a/tooling/eslint-config/package.json
+++ b/tooling/eslint-config/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.0",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
