--- a/tooling/prettier-config/package.json
+++ b/tooling/prettier-config/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.13"
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5"
   },
   "devDependencies": {
     "@saasfly/typescript-config": "workspace:*",
