--- a/tooling/tailwind-config/package.json
+++ b/tooling/tailwind-config/package.json
@@ -14,16 +14,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "autoprefixer": "10.4.17",
-    "postcss": "8.4.34",
-    "tailwindcss": "3.4.1"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@saasfly/eslint-config": "workspace:*",
     "@saasfly/prettier-config": "workspace:*",
     "@saasfly/typescript-config": "workspace:*",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   },
   "eslintConfig": {
