fix: update issue with building the platform and product (#4)
* feat: update build

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

* feat: update build

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

* feat: update build

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

* feat: update build

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

* feat: update build

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

---------

Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -4,18 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun with-env next build",
+    "build": "bun --verbose with-env next build",
     "clean": "git clean -xdf .next .turbo node_modules",
     "dev": "bun with-env next dev",
-    "format": "prettier --write . --ignore-path ../../.gitignore",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint ./src",
     "start": "bun with-env next start",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@saasfly/db": "workspace:*",
-    "@saasfly/ui": "workspace:*",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
@@ -26,6 +24,8 @@
     "@react-email/button": "0.0.15",
     "@react-email/components": "0.0.19",
     "@react-email/html": "0.0.8",
+    "@saasfly/db": "workspace:*",
+    "@saasfly/ui": "workspace:*",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-table": "^8.17.0",
     "@typescript-eslint/parser": "7.5.0",
@@ -64,7 +64,7 @@
     "react-textarea-autosize": "^8.5.3",
     "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
-    "resend": "^3.4.0",
+    "resend": "^3.5.0",
     "sharp": "^0.32.6",
     "shiki": "^1.10.3",
     "stripe": "^14.15.0",
