--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -32,6 +32,7 @@
     "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.12.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
