--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -45,5 +45,9 @@
     "shiki": "^1.10.3",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
+  },
+  "engines": {
+    "node": ">=20.5.1",
+    "pnpm": ">=8.7.1"
   }
 }
