--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "turbo build ",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
-    "db:push": "cd ./packages/db/ && bun db:push",
+    "db:push": "cd ./packages/db/ && pnpm db:push",
     "dev": "turbo dev --parallel",
     "dev:web": "turbo dev --parallel --filter !stripe",
     "format": "turbo format --continue -- --cache --cache-location='node_modules/.cache/.prettiercache' --ignore-path='../../.gitignore'",
@@ -35,7 +35,7 @@
     "tooling/*",
     "internal/*"
   ],
-  "packageManager": "bun@v1.1.10",
+  "packageManager": "pnpm@v8.6.6",
   "dependencies": {
     "clean": "^4.0.2",
     "format": "^0.2.2"
