chore: switch package manager
Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "format": "prisma format && prettier --check '**/*.{ts,json}' ",
     "db:generate": "prisma generate",
-    "db:push": "bun with-env prisma db push --skip-generate",
+    "db:push": "pnpm with-env prisma db push --skip-generate",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env.local --"
   },
