--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tooling/*",
     "internal/*"
   ],
-  "packageManager": "pnpm@v8.6.6",
+  "packageManager": "pnpm@8.7.1",
   "dependencies": {
     "clean": "^4.0.2",
     "format": "^0.2.2"
