--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "packageManager": "pnpm@8.7.1",
   "dependencies": {
     "clean": "^4.0.2",
-    "format": "^0.2.2"
+    "format": "^0.2.2",
+    "next": "^14.2.5"
   }
 }
