chore: switch package manager
Signed-off-by: Lens <45818877+yoanyombapro1234@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "packageManager": "pnpm@8.7.1",
   "dependencies": {
     "clean": "^4.0.2",
-    "format": "^0.2.2",
-    "next": "^14.2.5"
+    "format": "^0.2.2"
   }
 }
