--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -21,6 +21,7 @@
     "@nivo/calendar": "^0.87.0",
     "@nivo/funnel": "^0.86.0",
     "@nivo/line": "^0.86.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-email/button": "0.0.15",
     "@react-email/components": "0.0.19",
     "@react-email/html": "0.0.8",
