--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -143,6 +143,7 @@
     "./stepper/step-button-container": "./src/stepper/step-button-container.tsx",
     "./stepper/step-icon": "./src/stepper/step-icon.tsx",
     "./stepper/step-label": "./src/stepper/step-label.tsx",
-    "./stepper/use-stepper": "./src/stepper/use-stepper.tsx"
+    "./stepper/use-stepper": "./src/stepper/use-stepper.tsx",
+    "./utils/cn": "./src/utils/cn.ts"
   }
 }
