--- a/apps/web/tesseract-media/.eslintrc.json
+++ b/apps/web/tesseract-media/.eslintrc.json
@@ -1,10 +1,14 @@
 {
   // Configuration for JavaScript files
   "extends": [
-    "airbnb-base",
+    // "airbnb-base",
     "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
     "plugin:prettier/recommended"
   ],
+  "root": true,
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "rules": {
     "prettier/prettier": [
       "error",
@@ -42,7 +46,7 @@
       },
       "rules": {
         "prettier/prettier": [
-          "error",
+          "off",
           {
             "singleQuote": true,
             "endOfLine": "auto"
